Fix Spacing

--- a/nitorinc.css
+++ b/nitorinc.css
@@ -96,7 +96,7 @@
 }  
 
 
-@media only screen and (max-width: 810px){
+@media only screen and (max-width: 825px){
     .logo img{display: block; float: none; clear: both;}
     .logo {margin-bottom: 20px;}
     h1{padding: 0;}
@@ -120,7 +120,7 @@
     h1{font-size:15px; display: block; margin: 0 auto; padding: 20px 0; width: 80%; line-height: 120%;}
     #h{padding: 0;float: none;}
     .logo{margin: 20px auto; float:none;}
-    .logo img {float: none; margin: 0;}
+    .logo img {float: none; margin: 0 auto;}
     iframe{height:200px; width:90%; float:none; border: none; margin: 20px;}
     .btn{width:25%; margin: 20px 10px; display: inline;}
     #compOS{display:none;}
